# moe-router

./: .gitignore  README.md  dataset.py  generate.py  moe.py  moe_model.py  phase2_transformer.py  pyproject.toml  train.py  trainer.py  transformer.py  visualize_phase2.py
docs/: dataset.md  moe.md  results.md  trainer.md  transformer.md
utils/: visualize.py
