[project]
name = "moe-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.26.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.35.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
]
